--- a/test.ipynb
+++ b/test.ipynb
@@ -37,7 +37,7 @@
     "    FILE = pickle.load(f)\n",
     "app = Flask(__name__)\n",
     "CORS(app)\n",
-    "@app.route(\"/test\")\n",
+    "@app.route(\"/test\", methods=())\n",
     "def classify():\n",
     "\n",
     "    \n",
